2003-07-02  Abigail Brady  <morwen@evilmagic.org>

	* src/telnet.c: Fix bug with dealing with SB.

2003-07-02  Robin Ericsson  <lobbin@localhost.nu>

	* NEWS: Fixed up a bit.

2003-07-02  Abigail Brady  <morwen@evilmagic.org>

	* src/telnet.c: Make it send out valid NAWS subnegs if our screen 
	size happens to contain	255 in its serialisation.

	* src/telnet.c: Null-terminate the output buffer. Oops.

2003-06-31  Jordi Mallach  <jordi@sindominio.net>

	* README: Update for new mailing list, bugzilla, etc.

	* NEWS: Update for 0.10.2.

	* configure.ac: Remove some silly stuff.

2003-06-30  Abigail Brady  <morwen@evilmagic.org>

	* src/telnet.c, src/init.c, src/gnome-mud.h: Fix telnet
	handling to work if telnet sequences are split across
	packets.

2003-06-30  Robin Ericsson  <lobbin@localhost.nu>

	* plugins/text.plugin: Make it compile again.	

	* src/Makefile.am: Remove GTK_ENABLE_BROKEN=1

	* src/modules.c (plugin_clist_select_row_cb):
	Changed from GtkText to GtkTextView. 
	(do_plugin_information): Ditto.

	* src/modules_api.c [__MODULE__]: Remove define.

	* src/mudlist.c: Rewrote to use GtkTreeModel and
	GtkTextView instead of GtkTree and GtkText.  

2003-06-25  Jordi Mallach  <jordi@sindominio.net>

	* BUGS: Add a pointer to bugzilla.

	* configure.ac (AC_INIT): Remove BUG-REPORT argument.

	* gnome-mud.desktop.in: Add X-GNOME-Bugzilla entries.

2003-06-24  Jordi Mallach  <jordi@sindominio.net>

	* configure.ac (ALL_LINGUAS): Added "mk" (Macedonian).

	* src/bind.c (window_keybind): Replace gdk_window_raise() &
	gdk_window_show() with gtk_window_present().
	* src/modules.c (do_plugin_information): Likewise.
	* src/mudlist.c (window_mudlist): Likewise.
	* src/prefs.c (window_prefs): Likewise.
	* src/profiles.c (profilelist_dialog): Likewise.
	(window_profiles): Likewise.
	(window_profile_edit): Likewise.

2003-06-18  Fatih Demir <kabalak@gtranslator.org>

	* configure.ac: Added Turkish ("tr") to the languages' list and re-
		ordered the languages list there.
